--- a/sisacad/inicio.html
+++ b/sisacad/inicio.html
@@ -34,7 +34,8 @@
                 <li><a href="historico.html"><p>Histórico Escolar</p></a></li>
                 <li><a href="matriz.html"><p>Matriz Curricular</p></a></li>
                 <li><a href="material.html"><p>Material de Aula</p></a></li>
-                <li><a href="questionarios.html"><p>Questionários</p></a></li>
+                <li><a href="logout.html"><p>Logout</p></a></li>
+
 
             </ul>
     	</div>
@@ -59,10 +60,11 @@
                         <li><a href="#">Contato</a></li>
                         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Cursos<b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                              <li><a href="#">Eng1</a></li>
-                              <li><a href="#">Eng2</a></li>
-                              <li><a href="#">Eng3</a></li>
-                              <li><a href="#">Eng4</a></li>
+                              <li><a href="#">Engenharia de Computação</a></li>
+                              <li><a href="#">Engenharia de Telecomunicações</a></li>
+                              <li><a href="#">Engenharia Civil</a></li>
+                              <li><a href="#">Engenharia Elétrica</a></li>
+                              <li><a href="#">Engenharia Mecânica</a></li>
                             </ul>
                         </li>
                         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Área por nível<b class="caret"></b></a>
