matriz atualizada com logout

--- a/sisacad/matriz.html
+++ b/sisacad/matriz.html
@@ -34,8 +34,7 @@
                 <li><a href="historico.html"><p>Histórico Escolar</p></a></li>
                 <li class="active"><a href="matriz.html"><p>Matriz Curricular</p></a></li>
                 <li><a href="material.html"><p>Material de Aula</p></a></li>
-                <li><a href="questionarios.html"><p>Questionários</p></a></li>
-
+                <li><a href="logout.html"><p>Logout</p></a></li>
             </ul>
     	</div>
     </div>
@@ -59,10 +58,11 @@
                         <li><a href="#">Contato</a></li>
                         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Cursos<b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                              <li><a href="#">Eng1</a></li>
-                              <li><a href="#">Eng2</a></li>
-                              <li><a href="#">Eng3</a></li>
-                              <li><a href="#">Eng4</a></li>
+                              <li><a href="#">Engenharia de Computação</a></li>
+                              <li><a href="#">Engenharia de Telecomunicações</a></li>
+                              <li><a href="#">Engenharia Civil</a></li>
+                              <li><a href="#">Engenharia Elétrica</a></li>
+                              <li><a href="#">Engenharia Mecânica</a></li>
                             </ul>
                         </li>
                         <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Área por nível<b class="caret"></b></a>
@@ -95,11 +95,15 @@
                                           <th>Componente Curricular</th>
                                           <th>Carga Horária</th>
                                           <th>Créditos</th>
-                                          <th>Pré-requisitos<th>
+                                          <th>Pré-requisitos</th>
                                         </tr>
-                                        <th>S1</th>
+                            
                                       </thead>
                                       <tbody>
+
+                                        <thead>
+                                          <th>S1</th>
+                                        </thead>
                                         <tr>
                                           <td>Cálculo 1</td>
                                           <td>80</td>
@@ -130,11 +134,7 @@
                                         </tr>
 
                                         <thead>
-                                          <tr>
-                                            <th>S2</th>
-                                            <th><th>
-                                            <th><th>
-                                          </tr>
+                                          <th>S2</th>
                                         </thead>
 
                                         <tr>
@@ -174,11 +174,7 @@
                                         </tr>
 
                                         <thead>
-                                          <tr>
-                                            <th>S3</th>
-                                            <th><th>
-                                            <th><th>
-                                          </tr>
+                                          <th>S3</th>
                                         </thead>
 
                                         <tr>
@@ -218,11 +214,7 @@
                                         </tr>
 
                                         <thead>
-                                          <tr>
-                                            <th>S4</th>
-                                            <th><th>
-                                            <th><th>
-                                          </tr>
+                                          <th>S4</th>
                                         </thead>
 
                                         <tr>
@@ -262,11 +254,7 @@
                                         </tr>
 
                                         <thead>
-                                          <tr>
-                                            <th>S5</th>
-                                            <th><th>
-                                            <th><th>
-                                          </tr>
+                                          <th>S5</th>
                                         </thead>
 
                                         <tr>
