--- a/sisacad/index.html
+++ b/sisacad/index.html
@@ -9,8 +9,7 @@
     <meta name="keywords" content="sistema, academico, SISACAD" />
     <meta name="author" content="Rubens Barbosa" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" media="all" type="text/css" href="css/826c8a7ccfa5aa3095f443193840923843299023f.css">
 
