--- a/sisacad/boletim.html
+++ b/sisacad/boletim.html
@@ -7,12 +7,11 @@
     <meta name="description" content="SISACAD sistema academico da cadeira de engenharia de software." />
     <meta name="keywords" content="sistema, academico, engenharia, software" />
     <meta name="author" content="Rubens Barbosa" />
-    <!--link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico"-->
+    <link rel="shortcut icon" type="image/x-icon" href="imgs/favicon.png">
     <title>SISACAD</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/aluno.css">
     <link rel="stylesheet" type="text/css" href="css/light-bootstrap-dashboard.css" />
-
 </head>
 <body>
 
@@ -32,11 +31,9 @@
                 <li><a href="matriz.html"><p>Matriz Curricular</p></a></li>
                 <li><a href="material.html"><p>Material de Aula</p></a></li>
                 <li><a href="logout.html"><p>Logout</p></a></li>
-
             </ul>
     	</div>
     </div>
-
 
     <div class="main-panel">
         <nav class="navbar navbar-default navbar-fixed">
@@ -84,9 +81,9 @@
                     <div class="panel">
                       <div class="panel-body txt-block">
 
-                          <h2 class="">Boletim</h2>
+                          <h2>Boletim</h2>
                           <h3>Estrutura de Curso - Vigente - Graduação</h3>
-                          <h4>(20171020458782) - ALUNO FULANO DE TAL</h4>
+                          <h4>20171020458782 - ALUNO FULANO DE TAL</h4>
                           <table style="width:100%">
                           <tr>
                             <th>Componente Curricular</th>
@@ -188,7 +185,6 @@
         </div>
     </div>
 </div>
-
 
 <!-- javascript -->
 <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
