historico com favicon

--- a/sisacad/historico.html
+++ b/sisacad/historico.html
@@ -7,12 +7,11 @@
     <meta name="description" content="SISACAD sistema academico da cadeira de engenharia de software." />
     <meta name="keywords" content="sistema, academico, engenharia, software" />
     <meta name="author" content="Rubens Barbosa" />
-    <!--link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico"-->
+    <link rel="shortcut icon" type="image/x-icon" href="imgs/favicon.png">
     <title>SISACAD</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/aluno.css">
     <link rel="stylesheet" type="text/css" href="css/light-bootstrap-dashboard.css" />
-
 </head>
 <body>
 
