--- a/sisacad/index.html
+++ b/sisacad/index.html
@@ -2,17 +2,16 @@
 <html lang="pt">
   <head>
     <meta charset="utf-8">
-    <title>SISACAD</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Cadastre-se no nosso site e publique as vagas." />
+    <meta name="description" content="SISACAD sistema academico da cadeira de engenharia de software." />
     <meta name="keywords" content="sistema, academico, SISACAD" />
     <meta name="author" content="Rubens Barbosa" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="shortcut icon" type="image/x-icon" href="imgs/favicon.png">
+    <title>SISACAD</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" media="all" type="text/css" href="css/826c8a7ccfa5aa3095f443193840923843299023f.css">
-
   </head>
   <body>
 
