inicio com favicon

--- a/sisacad/inicio.html
+++ b/sisacad/inicio.html
@@ -7,6 +7,7 @@
     <meta name="description" content="SISACAD sistema academico da cadeira de engenharia de software." />
     <meta name="keywords" content="sistema, academico, engenharia, software" />
     <meta name="author" content="Rubens Barbosa" />
+    <link rel="shortcut icon" type="image/x-icon" href="imgs/favicon.png">
     <title>SISACAD</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/aluno.css">
