material de aula com favicon

--- a/sisacad/material.html
+++ b/sisacad/material.html
@@ -7,6 +7,7 @@
     <meta name="description" content="SISACAD sistema academico da cadeira de engenharia de software." />
     <meta name="keywords" content="sistema, academico, engenharia, software" />
     <meta name="author" content="Rubens Barbosa" />
+    <link rel="shortcut icon" type="image/x-icon" href="imgs/favicon.png">
     <title>SISACAD</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/aluno.css">
@@ -22,13 +23,13 @@
           <div><img src="imgs/icon.png" class="len"></div>
         </div>
             <ul class="nav">
-                <li class="active"><a href="inicio.html"><p>Início</p></a></li>
+                <li><a href="inicio.html"><p>Início</p></a></li>
                 <li><a href="horario.html"><p>Horário Individual</p></a></li>
                 <li><a href="diario.html"><p>Diários</p></a></li>
                 <li><a href="boletim.html"><p>Boletim</p></a></li>
                 <li><a href="historico.html"><p>Histórico Escolar</p></a></li>
                 <li><a href="matriz.html"><p>Matriz Curricular</p></a></li>
-                <li><a href="material.html"><p>Material de Aula</p></a></li>
+                <li class="active"><a href="material.html"><p>Material de Aula</p></a></li>
                 <li><a href="logout.html"><p>Logout</p></a></li>
             </ul>
     	</div>
