--- a/sisacad/matriz.html
+++ b/sisacad/matriz.html
@@ -7,12 +7,11 @@
     <meta name="description" content="SISACAD sistema academico da cadeira de engenharia de software." />
     <meta name="keywords" content="sistema, academico, engenharia, software" />
     <meta name="author" content="Rubens Barbosa" />
-    <!--link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico"-->
+    <link rel="shortcut icon" type="image/x-icon" href="imgs/favicon.png">
     <title>SISACAD</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/aluno.css">
     <link rel="stylesheet" type="text/css" href="css/light-bootstrap-dashboard.css" />
-
 </head>
 <body>
 
@@ -35,7 +34,6 @@
             </ul>
     	</div>
     </div>
-
 
     <div class="main-panel">
         <nav class="navbar navbar-default navbar-fixed">
@@ -83,7 +81,7 @@
                     <div class="panel">
                       <div class="panel-body txt-block">
                         <!-- Inicio da tabela -->
-                                <h2 class="sub-header">Matriz Curricular</h2>
+                                <h2>Matriz Curricular</h2>
                                 <h3 class="sub-header">Curso: Bacharelado em Engenharia de Computação</h3>
                                   <div class="table-responsive">
                                     <table class="table table-striped">
