upload do Horário Individual. OBS: falta finalizar

--- a/sisacad/horario.html
+++ b/sisacad/horario.html
@@ -83,7 +83,7 @@
 
                           <h2>Horário Individual</h2>
                           <h4>20171020458782 - Fulano de Tal</h4>
-                          <!-- Finalizar o horário individual -->
+                          <!-- Finalizar o Horário Individual -->
 
                       </div>
                     </div>
