--- a/sisacad/inicio.html
+++ b/sisacad/inicio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,100 +14,134 @@
     <link rel="stylesheet" type="text/css" href="css/aluno.css">
     <link rel="stylesheet" type="text/css" href="css/light-bootstrap-dashboard.css" />
 </head>
+
 <body>
 
-<div class="wrapper">
-    <div class="sidebar" data-image="">
-    	<div class="sidebar-wrapper">
-        <div class="logo">
-          <h3><b>SISACAD</b></h3>
-          <div><img src="imgs/icon.png" class="len"></div>
+    <div class="wrapper">
+        <div class="sidebar" data-image="">
+            <div class="sidebar-wrapper">
+                <div class="logo">
+                    <h3><b>SISACAD</b></h3>
+                    <div><img src="imgs/icon.png" class="len"></div>
+                </div>
+                <ul class="nav">
+                    <li class="active">
+                        <a href="inicio.html">
+                            <p>Início</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="horario.html">
+                            <p>Horário Individual</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="diario.html">
+                            <p>Diários</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="boletim.html">
+                            <p>Boletim</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="historico.html">
+                            <p>Histórico Escolar</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="matriz.html">
+                            <p>Matriz Curricular</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="material.html">
+                            <p>Material de Aula</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="logout.html">
+                            <p>Logout</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-            <ul class="nav">
-                <li class="active"><a href="inicio.html"><p>Início</p></a></li>
-                <li><a href="horario.html"><p>Horário Individual</p></a></li>
-                <li><a href="diario.html"><p>Diários</p></a></li>
-                <li><a href="boletim.html"><p>Boletim</p></a></li>
-                <li><a href="historico.html"><p>Histórico Escolar</p></a></li>
-                <li><a href="matriz.html"><p>Matriz Curricular</p></a></li>
-                <li><a href="material.html"><p>Material de Aula</p></a></li>
-                <li><a href="logout.html"><p>Logout</p></a></li>
-            </ul>
-    	</div>
-    </div>
 
-    <div class="main-panel">
-        <nav class="navbar navbar-default navbar-fixed">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
+        <div class="main-panel">
+            <nav class="navbar navbar-default navbar-fixed">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
+                    </div>
+                    <div class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="">Home</a></li>
+                            <li><a href="#">Sobre</a></li>
+                            <li><a href="#">Contato</a></li>
+                            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Cursos<b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Engenharia de Computação</a></li>
+                                    <li><a href="#">Engenharia de Telecomunicações</a></li>
+                                    <li><a href="#">Engenharia Civil</a></li>
+                                    <li><a href="#">Engenharia Elétrica</a></li>
+                                    <li><a href="#">Engenharia Mecânica</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Área por nível<b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Técnico</a></li>
+                                    <li><a href="#">Tecnólogo</a></li>
+                                    <li><a href="#">Graduação</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="">Home</a></li>
-                        <li><a href="#">Sobre</a></li>
-                        <li><a href="#">Contato</a></li>
-                        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Cursos<b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                              <li><a href="#">Engenharia de Computação</a></li>
-                              <li><a href="#">Engenharia de Telecomunicações</a></li>
-                              <li><a href="#">Engenharia Civil</a></li>
-                              <li><a href="#">Engenharia Elétrica</a></li>
-                              <li><a href="#">Engenharia Mecânica</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Área por nível<b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                              <li><a href="#">Técnico</a></li>
-                              <li><a href="#">Tecnólogo</a></li>
-                              <li><a href="#">Graduação</a></li>
-                            </ul>
-                        </li>
-                    </ul>
+            </nav>
+
+            <!-- Inicio do painel -->
+            <div class="content">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <div class="panel">
+                                    <div class="panel-body txt-block">
+
+                                        <h1 class="begin-header">Bem Vindo!</h1>
+                                        <div><img src="imgs/hand.png" class="img-hand"></div>
+                                        <h3 class="begin-header">SISACAD - Sistema Acadêmico 2k17</h3>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Inicio do rodapé -->
+                            <footer class="footer">
+                                <div class="container-fluid">
+                                    <p class="copyright text-center txt-block">
+                                        Copyright &copy; SISACAD 2017.
+                                    </p>
+                                </div>
+                            </footer>
+                            <!-- Fim do rodapé -->
+                        </div>
+                    </div>
                 </div>
             </div>
-        </nav>
 
-<!-- Inicio do painel -->
-<div class="content">
-    <div class="container-fluid">
-          <div class="row">
-              <div class="col-md-12">
-                  <div class="card">
-                    <div class="panel">
-                      <div class="panel-body txt-block">
-
-                          <h1 class="begin-header">Bem Vindo!</h1>
-                          <div><img src="imgs/hand.png" class="img-hand"></div>
-                          <h3 class="begin-header">SISACAD - Sistema Acadêmico 2k17</h3>
-                      </div>
-                    </div>
-                  </div>
-
-                <!-- Inicio do rodapé -->
-                <footer class="footer">
-                    <div class="container-fluid">
-                        <p class="copyright text-center txt-block">
-                            Copyright &copy; SISACAD 2017.
-                        </p>
-                    </div>
-                </footer>
-                <!-- Fim do rodapé -->
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- javascript -->
-<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-<script type="text/javascript" src="js/wow.min.js"></script>
-<script type="text/javascript" src="js/javascript.js"></script>
-<script src="js/bootstrap.min.js"></script>
+            <!-- javascript -->
+            <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+            <script type="text/javascript" src="js/wow.min.js"></script>
+            <script type="text/javascript" src="js/javascript.js"></script>
+            <script src="js/bootstrap.min.js"></script>
 
 </body>
+
 </html>
