--- a/sisacad - professor/inicio.html
+++ b/sisacad - professor/inicio.html
@@ -105,7 +105,7 @@
                                 <div class="panel">
                                     <div class="panel-body txt-block">
 
-                                        <h1 class="begin-header">Bem vindo, professor!</h1>
+                                        <h1 class="begin-header">Bem-vindo(a), professor(a)!</h1>
                                         <div><img src="imgs/hand.png" class="img-hand"></div>
                                         <h3 class="begin-header">SISACAD - Sistema Acadêmico 2017</h3>
                                     </div>
