Bem-vindo(a), aluno(a)

--- a/sisacad/inicio.html
+++ b/sisacad/inicio.html
@@ -115,9 +115,9 @@
                                 <div class="panel">
                                     <div class="panel-body txt-block">
 
-                                        <h1 class="begin-header">Bem Vindo!</h1>
+                                        <h1 class="begin-header">Bem-Vindo(a), aluno(a)!</h1>
                                         <div><img src="imgs/hand.png" class="img-hand"></div>
-                                        <h3 class="begin-header">SISACAD - Sistema Acadêmico 2k17</h3>
+                                        <h3 class="begin-header">SISACAD - Sistema Acadêmico 2017</h3>
                                     </div>
                                 </div>
                             </div>
