Correção botão data e text box para pesquisa de aluno inserida

--- a/sisacad - professor/nota-avaliacao.html
+++ b/sisacad - professor/nota-avaliacao.html
@@ -120,6 +120,7 @@
                                 </optgroup>
                             </select>
                                         </h4>
+                                        <h4>Data da avaliação:<input type="date" name="tNasc" id="tNasc" /></h4>
                                         <h2>Lançar notas</h2>
                                         <h4 class="sub-header">Selecione a turma:
                                             <select name="tEst" id="cEst">
